--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "serve-json":"json-server --watch db.json --port 4000"
+    "serve-json": "json-server --watch db.json --port 4000"
   },
   "dependencies": {
+    "@svgr/webpack": "^8.1.0",
     "json-server": "^0.17.1",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.5.0",
     "swr": "^2.3.3"
   },
   "devDependencies": {
